--- a/src/components/index.css
+++ b/src/components/index.css
@@ -69,6 +69,9 @@
     top: 0;
     left: 0;
   }
+  .header > * {
+    padding-top: 0;
+  }
   .link-list .hamburger {
     z-index: 99;
     display: block;
@@ -340,8 +343,8 @@
   font-size: var(--f-size-1x);
 }
 .footer {
-  margin-top: var(--margin-3x);
-  min-height: 50vh;
+  /* margin-top: var(--margin-3x); */
+  min-height: 30vh;
   width: 100%;
   justify-self: flex-end;
 }
@@ -356,7 +359,6 @@
 .footer__section2 {
   width: 100%;
   /* border: 2px solid green; */
-  display: grid;
 }
 .footer__section1 > *,
 .footer__section2 > * {
@@ -366,8 +368,9 @@
 }
 .footer__section1 {
   background: #ffffff;
-  border: 2px solid #354e57;
+  border: 1px solid #354e575d;
   padding: 1rem 0;
+  display: grid;
 }
 .footer__section1 > * {
   display: flex;
@@ -389,14 +392,16 @@
 .footer__section2 {
   background: #354e57;
   width: 100%;
-  place-items: center;
+
+  height: fit-content;
 }
 .footer__section2 > .grid-box {
-  height: 70%;
   /* border: 2px solid gray; */
   display: grid;
   grid-template-columns: auto auto;
-  grid-auto-rows: 1fr;
+  grid-auto-rows: auto;
+  justify-content: space-around;
+  padding: 3rem 0;
 }
 /* .footer__section2 > .grid-box > * {
   border: 2px solid magenta; 
@@ -483,12 +488,14 @@
   }
 
   .footer__section2 > .grid-box {
-    grid-template-columns: auto;
+    grid-template-columns: 1fr;
     gap: 5vh;
+    height: 50%;
   }
   .footer .nav {
     grid-row: 1;
     border-bottom: none;
+    gap: 2vh;
   }
   .footer .form {
     padding-bottom: 1rem;
@@ -496,5 +503,10 @@
   .social-links {
     justify-content: flex-start;
     gap: 3vh;
+  }
+}
+@media (max-width: 768px) {
+  .footer__section2 > .grid-box .nav {
+    justify-content: flex-start;
   }
 }
