--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,7 +2,6 @@
   min-height: 100vh;
   width: 100%;
 }
-
 .home-page .hero {
   width: 100%;
   background-color: #e2e6e9;
@@ -76,7 +75,12 @@
 .home-page .product-section {
   width: 100%;
   min-height: 70vh;
-  margin-top: var(--margin-3x);
+  background-color: #f7f7f7;
+  padding-top: var(--margin-3x);
+}
+.home-page .product-section > * {
+  width: var(--gutter-width);
+  margin-inline: auto;
 }
 .home-page .product-section .content {
   display: grid;
@@ -110,9 +114,9 @@
 
 /* ingredients section */
 
-/* .home-page .ingredient-section {
-  margin-top: var(--margin-3x);
-} */
+.home-page .ingredient-section {
+  background-color: #f7f7f7;
+}
 .home-page .ingredient-section > * {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(7rem, 10rem));
@@ -121,4 +125,39 @@
   justify-content: center;
   width: var(--gutter-width);
   max-width: var(--max-gutter-width);
+}
+.three-element-section {
+  min-height: 200px;
+  display: grid;
+}
+.three-element-section > * {
+  width: var(--gutter-width);
+  margin-inline: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3vh;
+}
+.three-element-section .three-element-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3vh;
+}
+.three-element-card__title {
+  font-size: 16px;
+  font-weight: 600;
+  color: #354e57;
+  text-align: center;
+}
+.three-element-card__link {
+  color: #354e57;
+  font-size: 12px;
+}
+@media (max-width: 375px) {
+  .three-element-section > * {
+    padding: 1rem 0;
+    flex-direction: column;
+  }
 }
