--- a/src/components/index.css
+++ b/src/components/index.css
@@ -12,7 +12,7 @@
   max-width: 1400px;
   margin-inline: auto;
   /* border: 2px solid brown; */
-  padding-top: 1.5rem;
+  padding: 1.5rem 0;
   gap: 0.5rem;
 }
 .header .bar1,
@@ -70,7 +70,7 @@
     left: 0;
   }
   .header > * {
-    padding-top: 0;
+    padding: 0;
   }
   .link-list .hamburger {
     z-index: 99;
@@ -274,55 +274,6 @@
   border-width: 1px;
 }
 
-/* sectionTeasers section */
-.teaser-section {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-auto-rows: 80vh;
-}
-/* .teaser-section > * {
-  border: 2px solid slateblue;
-} */
-.teaser-section__img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.teaser-section__info {
-  background-color: #547665;
-  display: grid;
-  place-items: center;
-  color: #fff;
-}
-.teaser-section__info > * {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  /* border: 2px solid blue; */
-  gap: 1rem;
-}
-.teaser-section__title {
-  font-size: var(--f-size-4x);
-  font-weight: 700;
-  color: #fff;
-  /* border: 2px solid green; */
-}
-.teaser-section__btn {
-  border-color: #ffffff5c;
-  color: white;
-}
-.teaser-section__btn:hover {
-  color: #2b434b;
-}
-@media (max-width: 768px) {
-  .teaser-section {
-    grid-template-columns: auto;
-  }
-}
-
 .ingredient-excerpt {
   max-width: 15rem;
   text-align: center;
@@ -343,7 +294,7 @@
   font-size: var(--f-size-1x);
 }
 .footer {
-  /* margin-top: var(--margin-3x); */
+  margin-top: var(--margin-3x);
   min-height: 30vh;
   width: 100%;
   justify-self: flex-end;
@@ -509,4 +460,106 @@
   .footer__section2 > .grid-box .nav {
     justify-content: flex-start;
   }
+}
+.news-teaser {
+  max-width: 251px;
+}
+.news-teaser__img {
+  width: 100%;
+  aspect-ratio: 3/4;
+  object-fit: cover;
+}
+.news-teaser__title {
+  color: #2e2e22;
+  font-size: var(--f-size-2x);
+  font-weight: bold;
+}
+.news-teaser__prgh {
+  color: #2e2e22;
+  font-size: var(--f-size-2x);
+}
+.news-teaser__link {
+  color: #2e2e22;
+  font-size: var(--f-size-1x);
+  font-weight: 600;
+}
+
+/* _________________________-__-__-
+ ______________________________
+ ____________________________utils
+ ______________________________
+ ____________________________-__-__-
+  */
+/* sectionTeasers section */
+.teaser-section {
+  width: 100%;
+  display: flex;
+}
+/* .teaser-section > * {
+  border: 2px solid slateblue;
+} */
+.teaser-section > * {
+  height: 90vh;
+}
+.teaser-section__img {
+  width: 50%;
+  object-fit: cover;
+}
+.teaser-section__info {
+  width: 50%;
+  background-color: #547665;
+  display: grid;
+  place-items: center;
+  color: #fff;
+}
+.teaser-section__info > * {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  /* border: 2px solid blue; */
+  gap: 1rem;
+}
+.teaser-section__title {
+  font-size: var(--f-size-4x);
+  font-weight: 700;
+  color: #fff;
+  /* border: 2px solid green; */
+}
+.teaser-section__btn {
+  border-color: #ffffff5c;
+  color: white;
+}
+.teaser-section__btn:hover {
+  color: #2b434b;
+}
+
+@media (max-width: 768px) {
+  .teaser-section {
+    flex-direction: column;
+  }
+  .teaser-section > * {
+    width: 100%;
+  }
+}
+
+/* belt */
+
+.belt {
+  min-height: 141px;
+  /* border: 2px solid green; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  border: 1px solid #547665;
+}
+.belt__title {
+  font-weight: 600;
+  font-size: var(--f-size-3x);
+}
+.belt__prgh {
+  font-size: var(--f-size-2x);
 }
