--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,14 +2,18 @@
   min-height: 100vh;
   width: 100%;
 }
-.home-page .hero {
+.banner-section {
   width: 100%;
   background-color: #e2e6e9;
   min-height: 50vh;
   /* border: 2px solid magenta; */
   /* display: grid; */
+  /* background-image: url("../../public/assets/img/hero-bg.png"); */
+  background-position: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-.home-page .hero > * {
+.banner-section > * {
   width: var(--gutter-width);
   margin-inline: auto;
   display: grid;
@@ -19,57 +23,56 @@
   /* border: 2px solid green; */
 }
 
-.home-page .hero .info {
+.banner-section .info {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 5vh;
   justify-self: flex-start;
 }
-.home-page .hero .headline {
+.banner-section .headline {
   font-size: 32px;
   line-height: 2rem;
   font-weight: bold;
   color: #354e57;
 }
-.home-page .hero .prgh {
+.banner-section .prgh {
   font-size: 1rem;
   color: #354e57;
 }
 
-.home-page .hero .img-display > img {
+.banner-section .product-img > img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-/* media query for hero section */
+/* media query for banner-section section */
 @media (max-width: 768px) {
-  .home-page .hero > * {
+  .banner-section > * {
     grid-template-columns: auto;
   }
-  .home-page .hero .img-display {
+  .banner-section .product-img {
     grid-row: 1;
   }
 }
 
 /* Products section  */
-.home-page .product-section {
+.product-section {
   width: 100%;
   min-height: 70vh;
   background-color: #f7f7f7;
   padding-top: var(--margin-3x);
 }
-.home-page .product-section > * {
-  width: var(--gutter-width);
-  margin-inline: auto;
-}
-.home-page .product-section .content {
+
+.product-section__content {
   display: grid;
   grid-template-rows: minmax(2rem, 3rem) 1fr;
+  width: var(--gutter-width);
+  margin-inline: auto;
   /* border: 2px solid green; */
 }
-.home-page .product-section .content .headline {
+.product-section__headline {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -81,13 +84,13 @@
   max-width: var(--max-gutter-width);
   margin-inline: auto;
 }
-.home-page .product-section .content .products {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(5rem, 10rem));
+.product-section__products {
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
   padding: 1rem 0;
   justify-content: center;
-  gap: 2vh;
+  gap: 1vh;
 }
 
 .belt.ingredient {
@@ -304,7 +307,62 @@
   margin-top: var(--margin-3x);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 251px));
+  grid-auto-rows: auto;
   align-items: center;
   justify-content: center;
   gap: 3vh;
+}
+
+/* Category Page (acne) */
+
+.category-section {
+  min-height: 100vh;
+}
+.category-section > * {
+  width: var(--gutter-width);
+  max-width: var(--max-gutter-width);
+  margin-inline: auto;
+  display: grid;
+  /* border: 1px solid green; */
+  gap: 5vh;
+}
+.category-section .dropdown {
+  grid-column: 1/3;
+  grid-row: 1 / 2;
+  margin-inline-start: auto;
+}
+.category-section .links {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+.category-section .products {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2vh;
+}
+.category-section .products > * {
+  flex: 1;
+}
+.category-section .products > *:nth-child(1) {
+  flex: 2;
+  grid-template-columns: minmax(200px, 400.31px);
+  width: 100%;
+  border: 2px solid brown;
+  max-width: 100%;
+}
+
+@media (max-width: 375px) {
+  .category-section .links {
+    display: none;
+  }
+}
+
+/* teaser section */
+._category .teaser-section {
+  margin-top: var(--margin-3x);
+}
+._category .teaser-section__info {
+  background-color: #a67744;
 }
